[gd_scene load_steps=15 format=2]

[ext_resource path="res://Enemies/Icy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Enemies/Icy/Baby.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/Icy/Adult.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "adult",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "baby",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 7.07107

[node name="Icy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
scale = Vector2( 0.684223, 0.684223 )
shape = SubResource( 1 )

[node name="appearance" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "baby"
frame = 2
playing = true

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0, 2 )
scale = Vector2( 0.885867, 0.885867 )
shape = SubResource( 3 )

[node name="immobolise_timer" type="Timer" parent="."]
one_shot = true

[node name="slow_timer" type="Timer" parent="."]
one_shot = true

[node name="blow_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="immobolise_timer" to="." method="_on_immobolise_timer_timeout"]
[connection signal="timeout" from="slow_timer" to="." method="_on_slow_timer_timeout"]
[connection signal="timeout" from="blow_timer" to="." method="_on_blow_timer_timeout"]
